--- a/Prison Admission Data.Rmd
+++ b/Prison Admission Data.Rmd
@@ -8,6 +8,7 @@ output: html_notebook
 library(tidyr)
 library(dplyr)
 library(ggplot2)
+# wanted to use mgcv but errors show up when using on mac...will use the library for future projects with windows.  
 library(mgcv)
 library(plotly)
  
