Update Prison Admission Data.Rmd

--- a/Prison Admission Data.Rmd
+++ b/Prison Admission Data.Rmd
@@ -125,7 +125,7 @@ fig <- ggplotly(p)
 
 fig
 
-p <- ggplot(fiscal_year, aes(Total, Direct.Court.Commitments))
+p <- ggplot(fiscal_year, aes(Total, Probation.Revocations))
 p <- p + geom_point() + stat_smooth()
 
 fig <- ggplotly(p)
